--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
 
     <title>Web Studio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
       rel="stylesheet"
@@ -586,7 +587,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <form class="modal-form">
           <button class="btn-close" type="button">
